[package]
name = "eta-core"
version = "0.4.4"
edition = "2021"
rust-version = "1.65.0"
license = "BSD-2-Clause"
authors = ["Hans S. <hans@0x8.io>"]
description = "Eta calculus Core (no_std)"
repository = "https://github.com/DaBigBlob/eta-core"
readme = "README.md"

[dependencies]
hashbrown = { version = "0.16.1", default-features = false, features = ["default-hasher", "inline-more"] }
thiserror = { version = "2.0.17", default-features = false }
